--- a/res/values/audio_tweaks_strings.xml
+++ b/res/values/audio_tweaks_strings.xml
@@ -91,5 +91,10 @@
     <string name="audio_effects_qc_summary">Disable qualcomm enhanced hardware effects</string>
     <string name="audio_effects_dolby_title">Enable Dolby</string>
     <string name="audio_effects_dolby_summary">Enable systemwide Dolby effect</string>
+    <string name="audio_effects_viper_title">Enable ViperFX</string>
+    <string name="audio_effects_viper_summary">Enable systemwide ViperFX effect</string>
+
+    <string name="audio_effects_viper_force_title">Force ViperFX</string>
+    <string name="audio_effects_viper_force_summary">Force ViperFX effect on all streams</string>
 
 </resources>
