--- a/res/xml/app_profile.xml
+++ b/res/xml/app_profile.xml
@@ -81,6 +81,12 @@
             android:defaultValue="default"
             android:summary="%s" />
 
+        <SwitchPreference
+            android:key="app_profile_keep_on"
+            android:title="@string/app_profile_keep_on_title"
+            android:summary="@string/app_profile_keep_on_summary"
+            android:defaultValue="false" />
+
         <ListPreference
             android:key="app_profile_spoof"
             android:title="@string/app_profile_spoof_title"
@@ -88,6 +94,13 @@
             android:entryValues="@array/spoof_listvalues"
             android:defaultValue="default"
             android:summary="%s" />
+
+        <SwitchPreference
+            android:key="app_profile_phka"
+            android:title="@string/app_profile_phka_title"
+            android:summary="@string/app_profile_phka_summary"
+            android:persistent="false" />
+
 
         <SwitchPreference
             android:key="app_profile_reader"
@@ -166,7 +179,7 @@
             android:summary="@string/app_profile_camera_hal1_summary"
             android:defaultValue="false" / -->
 
-        <Preference
+        <!-- Preference
     	    android:key="app_backup_restore_backup"
     	    android:title="@string/app_backup_restore_backup_title"
             android:summary="@string/app_backup_restore_backup_summary"/>
@@ -174,6 +187,6 @@
         <Preference
     	    android:key="app_backup_restore_restore"
     	    android:title="@string/app_backup_restore_restore_title"
-            android:summary="@string/app_backup_restore_restore_summary"/>
+            android:summary="@string/app_backup_restore_restore_summary"/ -->
 
 </PreferenceScreen>
