--- a/res/values/app_profile_arrays.xml
+++ b/res/values/app_profile_arrays.xml
@@ -69,6 +69,7 @@
     	<item>@string/brightness_reduced</item>
     	<item>@string/brightness_quarter</item>
     	<item>@string/brightness_full</item>
+    	<item>@string/brightness_increased</item>
     	<item>@string/brightness_10</item>
     	<item>@string/brightness_20</item>
     	<item>@string/brightness_30</item>
@@ -86,6 +87,7 @@
     	<item>10</item>
     	<item>12</item>
     	<item>11</item>
+    	<item>15</item>
     	<item>1</item>
     	<item>2</item>
     	<item>3</item>
@@ -183,5 +185,24 @@
     	<item>15</item>
     	<item>16</item>
     </string-array>
+
+    <string-array name="location_listentries">
+    	<item>Default</item>
+    	<item>Full + Geofence</item>
+    	<item>Full</item>
+    	<item>Network</item>
+    	<item>Passive</item>
+    	<item>None</item>
+    </string-array>
+
+    <string-array name="location_listvalues">
+    	<item>0</item>
+    	<item>1</item>
+    	<item>2</item>
+    	<item>3</item>
+    	<item>4</item>
+    	<item>5</item>
+    </string-array>
+
 
 </resources>
