--- a/res/values/app_profile_strings.xml
+++ b/res/values/app_profile_strings.xml
@@ -41,6 +41,7 @@
     <string name="brightness_reduced">Reduced Auto</string>
     <string name="brightness_quarter">Quarter Auto</string>
     <string name="brightness_full">Full</string>
+    <string name="brightness_increased">Increased Auto</string>
     <string name="brightness_10">10\%</string>
     <string name="brightness_20">20\%</string>
     <string name="brightness_30">30\%</string>
@@ -148,10 +149,15 @@
 
     <string name="app_profile_spoof_title">Spoof Device Model</string>
 
+    <string name="app_profile_location_title">Location Mode</string>
+
     <string name="app_profile_keep_on_title">Keep Awake</string>
     <string name="app_profile_keep_on_summary">Keep device awake while this app is active</string>
 
     <string name="app_profile_phka_title">Force SW Attestation</string>
     <string name="app_profile_phka_summary">Prevent hardware key attestation for this app. Could help to fix SafetyNet or other ROOT and unblocked bootloader detection.</string>
+
+    <string name="app_profile_lowres_title">Low Resolution</string>
+    <string name="app_profile_lowres_summary">Reduce virtual screen resoultion for better gaming performance</string>
 
 </resources>
