Default Location Mode [2/2]
Change-Id: I5c595a1d8c0c3028b7688c5d520fbb03aed6a909

--- a/res/values/app_profile_arrays.xml
+++ b/res/values/app_profile_arrays.xml
@@ -188,9 +188,9 @@
 
     <string-array name="location_listentries">
     	<item>Default</item>
-    	<item>Full + Geofence</item>
     	<item>Full</item>
-    	<item>Network</item>
+    	<item>Network Fine</item>
+    	<item>Network Coarse</item>
     	<item>Passive</item>
     	<item>None</item>
     </string-array>
